--- a/IntegratedPresenter/MainWindow.xaml
+++ b/IntegratedPresenter/MainWindow.xaml
@@ -859,56 +859,82 @@
                                                 <StackPanel HorizontalAlignment="Center">
                                                     <TextBlock Margin="0,5,0,0" TextAlignment="Center" Style="{StaticResource GrayText}">CONDITIONS</TextBlock>
                                                     <StackPanel Orientation="Vertical">
-                                                        <Button Focusable="False" Margin="0,10,0,0" Name="Btn_Cond1" Click="ClickToggleCond1" Foreground="White">
-                                                            <Button.Content>1</Button.Content>
-                                                            <Button.Template>
-                                                                <ControlTemplate>
-                                                                    <Border Width="80" Height="20" Name="Border" Background="#1d1d1d" BorderBrush="{TemplateBinding Foreground}" Margin="3" BorderThickness="1">
-                                                                        <ContentControl VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="{Binding Path=Foreground, RelativeSource={RelativeSource AncestorType={x:Type Button}}}" Content="{Binding Path=Content, RelativeSource={RelativeSource AncestorType={x:Type Button}}}"></ContentControl>
-                                                                    </Border>
-                                                                    <ControlTemplate.Triggers>
-                                                                        <DataTrigger Binding="{Binding Value}" Value="True">
-                                                                            <Setter Property="BorderBrush" Value="#ff12db1f" TargetName="Border"></Setter>
-                                                                            <Setter Property="Background" Value="#a012db1f" TargetName="Border"></Setter>
-                                                                        </DataTrigger>
-                                                                        <DataTrigger Binding="{Binding Value}" Value="False">
-                                                                            <Setter Property="BorderBrush" Value="Red" TargetName="Border"></Setter>
-                                                                            <Setter Property="Background" Value="#a0ff0000" TargetName="Border"></Setter>
-                                                                        </DataTrigger>
-                                                                        <Trigger Property="IsMouseOver" Value="True">
-                                                                            <Setter Property="Cursor" Value="Hand"></Setter>
-                                                                            <Setter Property="BorderBrush" Value="#ffdbd812" TargetName="Border"></Setter>
-                                                                            <Setter Property="Background" Value="#80dbd812" TargetName="Border"></Setter>
-                                                                        </Trigger>
-                                                                    </ControlTemplate.Triggers>
-                                                                </ControlTemplate>
-                                                            </Button.Template>
-                                                        </Button>
-                                                        <Button Focusable="False" Margin="0,10,0,0" Name="Btn_Cond2" Click="ClickToggleCond2" Foreground="White">
-                                                            <Button.Content>2</Button.Content>
-                                                            <Button.Template>
-                                                                <ControlTemplate>
-                                                                    <Border Width="80" Height="20" Name="Border" Background="#1d1d1d" BorderBrush="{TemplateBinding Foreground}" Margin="3" BorderThickness="1">
-                                                                        <ContentControl VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="{Binding Path=Foreground, RelativeSource={RelativeSource AncestorType={x:Type Button}}}" Content="{Binding Path=Content, RelativeSource={RelativeSource AncestorType={x:Type Button}}}"></ContentControl>
-                                                                    </Border>
-                                                                    <ControlTemplate.Triggers>
-                                                                        <DataTrigger Binding="{Binding Value}" Value="True">
-                                                                            <Setter Property="BorderBrush" Value="#ff12db1f" TargetName="Border"></Setter>
-                                                                            <Setter Property="Background" Value="#a012db1f" TargetName="Border"></Setter>
-                                                                        </DataTrigger>
-                                                                        <DataTrigger Binding="{Binding Value}" Value="False">
-                                                                            <Setter Property="BorderBrush" Value="Red" TargetName="Border"></Setter>
-                                                                            <Setter Property="Background" Value="#a0ff0000" TargetName="Border"></Setter>
-                                                                        </DataTrigger>
-                                                                        <Trigger Property="IsMouseOver" Value="True">
-                                                                            <Setter Property="Cursor" Value="Hand"></Setter>
-                                                                            <Setter Property="BorderBrush" Value="#ffdbd812" TargetName="Border"></Setter>
-                                                                            <Setter Property="Background" Value="#80dbd812" TargetName="Border"></Setter>
-                                                                        </Trigger>
-                                                                    </ControlTemplate.Triggers>
-                                                                </ControlTemplate>
-                                                            </Button.Template>
-                                                        </Button>
+                                                        <Grid>
+                                                            <Grid Panel.ZIndex="1" Margin="0,10,0,0">
+                                                                <Viewbox x:Name="ksc_cond1" IsHitTestVisible="False" Panel.ZIndex="1" Height="20" Width="80">
+                                                                    <Grid>
+                                                                        <Border Style="{StaticResource UIShortcutBdr}">
+                                                                            <Viewbox>
+                                                                                <TextBlock Style="{StaticResource UIShortcut}">PgUp</TextBlock>
+                                                                            </Viewbox>
+                                                                        </Border>
+                                                                    </Grid>
+                                                                </Viewbox>
+                                                            </Grid>
+                                                            <Button Focusable="False" Margin="0,10,0,0" Name="Btn_Cond1" Click="ClickToggleCond1" Foreground="White">
+                                                                <Button.Content>1</Button.Content>
+                                                                <Button.Template>
+                                                                    <ControlTemplate>
+                                                                        <Border Width="80" Height="20" Name="Border" Background="#1d1d1d" BorderBrush="{TemplateBinding Foreground}" Margin="3" BorderThickness="1">
+                                                                            <ContentControl VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="{Binding Path=Foreground, RelativeSource={RelativeSource AncestorType={x:Type Button}}}" Content="{Binding Path=Content, RelativeSource={RelativeSource AncestorType={x:Type Button}}}"></ContentControl>
+                                                                        </Border>
+                                                                        <ControlTemplate.Triggers>
+                                                                            <DataTrigger Binding="{Binding Value}" Value="True">
+                                                                                <Setter Property="BorderBrush" Value="#ff12db1f" TargetName="Border"></Setter>
+                                                                                <Setter Property="Background" Value="#a012db1f" TargetName="Border"></Setter>
+                                                                            </DataTrigger>
+                                                                            <DataTrigger Binding="{Binding Value}" Value="False">
+                                                                                <Setter Property="BorderBrush" Value="Red" TargetName="Border"></Setter>
+                                                                                <Setter Property="Background" Value="#a0ff0000" TargetName="Border"></Setter>
+                                                                            </DataTrigger>
+                                                                            <Trigger Property="IsMouseOver" Value="True">
+                                                                                <Setter Property="Cursor" Value="Hand"></Setter>
+                                                                                <Setter Property="BorderBrush" Value="#ffdbd812" TargetName="Border"></Setter>
+                                                                                <Setter Property="Background" Value="#80dbd812" TargetName="Border"></Setter>
+                                                                            </Trigger>
+                                                                        </ControlTemplate.Triggers>
+                                                                    </ControlTemplate>
+                                                                </Button.Template>
+                                                            </Button>
+                                                        </Grid>
+                                                        <Grid>
+                                                            <Grid Panel.ZIndex="1" Margin="0,10,0,0">
+                                                                <Viewbox x:Name="ksc_cond2" IsHitTestVisible="False" Panel.ZIndex="1" Height="20" Width="80">
+                                                                    <Grid>
+                                                                        <Border Style="{StaticResource UIShortcutBdr}">
+                                                                            <Viewbox>
+                                                                                <TextBlock Style="{StaticResource UIShortcut}">PgDn</TextBlock>
+                                                                            </Viewbox>
+                                                                        </Border>
+                                                                    </Grid>
+                                                                </Viewbox>
+                                                            </Grid>
+                                                            <Button Focusable="False" Margin="0,10,0,0" Name="Btn_Cond2" Click="ClickToggleCond2" Foreground="White">
+                                                                <Button.Content>2</Button.Content>
+                                                                <Button.Template>
+                                                                    <ControlTemplate>
+                                                                        <Border Width="80" Height="20" Name="Border" Background="#1d1d1d" BorderBrush="{TemplateBinding Foreground}" Margin="3" BorderThickness="1">
+                                                                            <ContentControl VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="{Binding Path=Foreground, RelativeSource={RelativeSource AncestorType={x:Type Button}}}" Content="{Binding Path=Content, RelativeSource={RelativeSource AncestorType={x:Type Button}}}"></ContentControl>
+                                                                        </Border>
+                                                                        <ControlTemplate.Triggers>
+                                                                            <DataTrigger Binding="{Binding Value}" Value="True">
+                                                                                <Setter Property="BorderBrush" Value="#ff12db1f" TargetName="Border"></Setter>
+                                                                                <Setter Property="Background" Value="#a012db1f" TargetName="Border"></Setter>
+                                                                            </DataTrigger>
+                                                                            <DataTrigger Binding="{Binding Value}" Value="False">
+                                                                                <Setter Property="BorderBrush" Value="Red" TargetName="Border"></Setter>
+                                                                                <Setter Property="Background" Value="#a0ff0000" TargetName="Border"></Setter>
+                                                                            </DataTrigger>
+                                                                            <Trigger Property="IsMouseOver" Value="True">
+                                                                                <Setter Property="Cursor" Value="Hand"></Setter>
+                                                                                <Setter Property="BorderBrush" Value="#ffdbd812" TargetName="Border"></Setter>
+                                                                                <Setter Property="Background" Value="#80dbd812" TargetName="Border"></Setter>
+                                                                            </Trigger>
+                                                                        </ControlTemplate.Triggers>
+                                                                    </ControlTemplate>
+                                                                </Button.Template>
+                                                            </Button>
+                                                        </Grid>
                                                     </StackPanel>
                                                 </StackPanel>
                                             </Border>
