save raw config source code

--- a/SlideCreater/MainWindow.xaml
+++ b/SlideCreater/MainWindow.xaml
@@ -409,6 +409,7 @@
                                             <Setter Property="Foreground" Value="White"></Setter>
                                         </DataTrigger>
                                     </Style.Triggers>
+                                    <Setter Property="VerticalContentAlignment" Value="Top"></Setter>
                                 </Style>
                             </ListView.Resources>
                             <ListView.View>
