--- a/SlideCreater/MainWindow.xaml
+++ b/SlideCreater/MainWindow.xaml
@@ -1,10 +1,8 @@
 ﻿<Window x:Class="SlideCreater.CreaterEditorWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SlideCreater" xmlns:uicontrols="clr-namespace:UIControls;assembly=UIControls" xmlns:AvalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit"
-        mc:Ignorable="d"
         Closing="OnWindowClosing"
         Title="Slide Creater" Height="800" Width="1000">
     <Window.Resources>
@@ -100,6 +98,13 @@
                 <!--<MenuItem IsEnabled="false" Click="ClickSave" Header="Save"></MenuItem>-->
                 <!--<MenuItem IsEnabled="false" Click="ClickSaveJSON" Header="Save JSON"></MenuItem>-->
             </MenuItem>
+            <MenuItem Header="Edit" Name="miEdit">
+                <MenuItem Foreground="Black" Name="miFormatSource" Click="FormatCode" Header="Format Document">
+                    <MenuItem.Icon>
+                        <Image Source="/ViewControls/Images/Mop.png"></Image>
+                    </MenuItem.Icon>
+                </MenuItem>
+            </MenuItem>
             <MenuItem Header="View">
                 <MenuItem Foreground="Black" Name="mipreviewslide" Click="ClickTogglePreviewSlide" Header="Preview Slides" IsChecked="true" IsCheckable="true">
                 </MenuItem>
@@ -158,6 +163,16 @@
                         </StackPanel>
                     </Grid>
                 </Button>
+
+                <!--<Button Style="{StaticResource DarkBtn}" Click="FormatCode" Width="100" Padding="10,0,10,0" Margin="180,5,0,0">
+                    <Grid>
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="/ViewControls/Images/PublishPurple.png" Width="40" Height="40" Margin="0,-1,0,0"></Image>
+                            <TextBlock VerticalAlignment="Center" Foreground="White">Format</TextBlock>
+                        </StackPanel>
+                    </Grid>
+                </Button>-->
+
 
             </StackPanel>
 
